--- a/app/templates/land.html
+++ b/app/templates/land.html
@@ -146,6 +146,22 @@
             transition: 0.3s;
         }
 
+        .w3-sidebar .nested-dropdown-btn {
+            font-size: medium;
+            border: none;
+            outline: none;
+            padding: 0;
+            background: none;
+            cursor: pointer;
+            display: block;
+            text-align: left;
+            width: 100%;
+            margin-left: 15px;
+            margin-top: 8px;
+            transition: 0.3s;
+        }
+
+
         .w3-sidebar .dropdown-container {
             display: none;
             background-color: #f9f9f9;
@@ -153,10 +169,19 @@
         }
 
         .w3-sidebar .dropdown-container a {
-            font-size: small;
+            font-size: medium;
         }
-        .dropdown-icon{
-            font-size: small;
+
+        .w3-sidebar .nested-dropdown-container {
+            display: none;
+            background-color: #e9e9e9;
+            padding-left: 30px;
+            /* Indent nested dropdown options */
+        }
+
+        .dropdown-icon {
+            font-size: 10px;
+            margin-left: 5px;
         }
     </style>
 </head>
@@ -191,21 +216,22 @@
         <a href="#" class="w3-bar-item w3-button" style="font-size: medium;">Purchase</a>
         <a href="#" class="w3-bar-item w3-button" style="font-size: medium;">Time Tracking</a>
         <a href="#" class="w3-bar-item w3-button" style="font-size: medium;">Accounts</a>
-        <button class="w3-bar-item w3-button dropdown-btn" style="font-size: medium;color: #f1f1f1;">Payroll <span class="dropdown-icon">&#9660;</span> </button>
+        <a href="#" class="w3-bar-item w3-button" style="font-size: medium;">Payroll</a>
+        <button class="w3-bar-item w3-button dropdown-btn" style="font-size: medium;color: #f1f1f1;">Reports<span
+                class="dropdown-icon">&#9660;</span> </button>
         <div class="dropdown-container" style="background-color: transparent;">
-            <a href="#"  class="w3-bar-item w3-button">Sales</a>
-            <a href="#" class="w3-bar-item w3-button">Stock report</a>
-            <a href="#" class="w3-bar-item w3-button">Accounts payable</a>
+            <a href="#" class="w3-bar-item w3-button">Sales <span class="dropdown-icon">&#9660;</span> </a>
+            <button class="w3-bar-item w3-button nested-dropdown-btn" style="font-size: medium;color: #f1f1f1;">Stock
+                report <span class="dropdown-icon">&#9660;</span> </button>
+            <div class="nested-dropdown-container" style="background-color: transparent;">
+                <a href="#" class="w3-bar-item w3-button">Sales</a>
+                <a href="#" class="w3-bar-item w3-button" id="dropd">Sales by Customer</a>
+                <a href="#" class="w3-bar-item w3-button">Accounts payable </a>
+            </div>
+            <a href="#" class="w3-bar-item w3-button">Accounts payable <span class="dropdown-icon">&#9660;</span> </a>
         </div>
-        <!-- <a href="#" class=" dropdown-toggle" style="font-size: medium;" data-toggle="dropdown">Dishes</a>
-        <div class="dropdown-menu" style="background-color: transparent;">
-            <a href="" style="font-size: medium;" class="dropdown-item"></a>
-            <a href="" style="font-size: medium;" class="dropdown-item">Non-veg</a>
-            <a href="" style="font-size: medium;" class="dropdown-item">Ice Creamss</a>
-        </div> -->
     </div>
-    <div class="container"
-        style="margin-top: 96px;background-color:rgb(27, 26, 29);height: 400px;">
+    <div class="container" style="margin-top: 96px;background-color:rgb(27, 26, 29);height: 400px;">
         <div class="container">
             <div class="row" style="justify-content: space-between;">
                 <div style="margin-top: 20px;">
@@ -215,108 +241,6 @@
         </div><br>
     </div><br>
 
-    <!-- <div class="container">
-        <div class="row"
-            style="justify-content: space-around;background-color: rgb(35, 6, 62);margin-top: 20px;border-radius: 20px;">
-            <div class="col-md-3" style=" margin-bottom: 10px;margin-top: 20px;">
-                <div class="row-3" style="justify-content: center;margin-top: 10px;">
-                    <div class="card" style="background-color: rgb(88, 35, 138);height: 10px;border-radius: unset;">
-                    </div>
-                    <div class="card"
-                        style="height: 70px;justify-content: center;border-radius: unset;background-color: #ffffff;">
-                        <span style="font-weight: bold;margin-left: 30px;">New Deals</span>
-                    </div>
-                </div>
-                <div class="row" id="messageContainer" style="margin-bottom: 10px;">
-                </div>
-            </div>
-            <div class="col-md-8" style="border-radius: 20px;">
-                <div class="row" style="margin-top: 20px;margin-bottom: 20px;">
-                    <h4 style="color: #f1f1f1;font-size: medium;font-weight: bold;">New Clients</h4>
-                    <div class="col-md-4">
-                        <div class="card"
-                            style="background-color: rgb(56, 16, 94);color: #f1f1f1;justify-content: center;display: flex;align-items: center;margin-top: 20px;margin-bottom: 20px;border-radius: 20px;">
-                            <img src="/static/m1.jpg/" alt="" style="width: 105PX;border-radius: 50%;margin-top: 15px;">
-                            <span style="margin-top: 10px; font-size: medium;font-weight: 700;">Client 1</span><br>
-                            <div
-                                style="background-color:rgb(74, 15, 124);width: 100%;justify-content: center;display: flex;flex-direction: column;align-items: center;">
-                                <span style="font-size: small;color: rgb(207, 187, 227)">client Id : <span
-                                        style="color: rgb(247, 245, 250);font-size: medium;margin-left: 5px;font-weight: bold;">
-                                        CL101</span></span>
-                                <span style="font-size: small;color: rgb(207, 187, 227)">email : <span
-                                        style="color: rgb(247, 245, 250);font-size: medium;margin-left: 5px;font-weight: bold;">
-                                        client@gmail.com</span></span>
-                            </div><br>
-                            <button
-                                style="background-color: #f1f1f1;width: 150px;border-radius: 20px;font-weight: bold;margin-bottom: 15px;">View
-                                Details</button>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card"
-                            style="background-color: rgb(56, 16, 94);color: #f1f1f1;justify-content: center;display: flex;align-items: center;margin-top: 20px;margin-bottom: 20px;border-radius: 20px;">
-                            <img src="/static/m1.jpg/" alt="" style="width: 105PX;border-radius: 50%;margin-top: 15px;">
-                            <span style="margin-top: 10px; font-size: medium;font-weight: 700;">Client 1</span><br>
-                            <div
-                                style="background-color:rgb(74, 15, 124);width: 100%;justify-content: center;display: flex;flex-direction: column;align-items: center;">
-                                <span style="font-size: small;color: rgb(207, 187, 227)">client Id : <span
-                                        style="color: rgb(247, 245, 250);font-size: medium;margin-left: 5px;font-weight: bold;">
-                                        CL101</span></span>
-                                <span style="font-size: small;color: rgb(207, 187, 227)">email : <span
-                                        style="color: rgb(247, 245, 250);font-size: medium;margin-left: 5px;font-weight: bold;">
-                                        client@gmail.com</span></span>
-                            </div><br>
-                            <button
-                                style="background-color: #f1f1f1;width: 150px;border-radius: 20px;font-weight: bold;margin-bottom: 15px;">View
-                                Details</button>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card"
-                            style="background-color: rgb(56, 16, 94);color: #f1f1f1;justify-content: center;display: flex;align-items: center;margin-top: 20px;margin-bottom: 20px;border-radius: 20px;">
-                            <img src="/static/m1.jpg/" alt="" style="width: 105PX;border-radius: 50%;margin-top: 15px;">
-                            <span style="margin-top: 10px; font-size: medium;font-weight: 700;">Client 1</span><br>
-                            <div
-                                style="background-color:rgb(74, 15, 124);width: 100%;justify-content: center;display: flex;flex-direction: column;align-items: center;">
-                                <span style="font-size: small;color: rgb(207, 187, 227)">client Id : <span
-                                        style="color: rgb(247, 245, 250);font-size: medium;margin-left: 5px;font-weight: bold;">
-                                        CL101</span></span>
-                                <span style="font-size: small;color: rgb(207, 187, 227)">email : <span
-                                        style="color: rgb(247, 245, 250);font-size: medium;margin-left: 5px;font-weight: bold;">
-                                        client@gmail.com</span></span>
-                            </div><br>
-                            <button
-                                style="background-color: #f1f1f1;width: 150px;border-radius: 20px;font-weight: bold;margin-bottom: 15px;">View
-                                Details</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="row" style="margin-top: 20px;margin-bottom: 20px;">
-                    <h4 style="color: #f1f1f1;font-size: medium;font-weight: bold;">New Clients</h4>
-                    <div class="col-md-4">
-                        <div class="card"
-                            style="background-color: rgb(56, 16, 94);color: #f1f1f1;justify-content: center;display: flex;align-items: center;margin-top: 20px;margin-bottom: 20px;border-radius: 20px;">
-                            <img src="/static/m1.jpg/" alt="" style="width: 105PX;border-radius: 50%;margin-top: 15px;">
-                            <span style="margin-top: 10px; font-size: medium;font-weight: 700;">Client 1</span><br>
-                            <div
-                                style="background-color:rgb(74, 15, 124);width: 100%;justify-content: center;display: flex;flex-direction: column;align-items: center;">
-                                <span style="font-size: small;color: rgb(207, 187, 227)">client Id : <span
-                                        style="color: rgb(247, 245, 250);font-size: medium;margin-left: 5px;font-weight: bold;">
-                                        CL101</span></span>
-                                <span style="font-size: small;color: rgb(207, 187, 227)">email : <span
-                                        style="color: rgb(255, 255, 255);font-size: medium;margin-left: 5px;font-weight: bold;">
-                                        client@gmail.com</span></span>
-                            </div><br>
-                            <button
-                                style="background-color: #f1f1f1;width: 150px;border-radius: 20px;font-weight: bold;margin-bottom: 15px;">View
-                                Details</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    </div><br> -->
     <div id="popupDropzone" class="popup-dropzone" style="justify-content: center;align-items: center;position: fixed;">
         <h5 class="text-center" style="font-weight: bold;font-size: large;color: rgb(46, 8, 46);margin-top: 20px;">Add
             to Archieve
@@ -572,7 +496,22 @@
                 }
             });
         }
+
+        var nestedDropdown = document.getElementsByClassName("nested-dropdown-btn");
+        for (var i = 0; i < nestedDropdown.length; i++) {
+            nestedDropdown[i].addEventListener("click", function () {
+                this.classList.toggle("active");
+                var nestedDropdownContent = this.nextElementSibling;
+                if (nestedDropdownContent.style.display === "block") {
+                    nestedDropdownContent.style.display = "none";
+                } else {
+                    nestedDropdownContent.style.display = "block";
+                }
+            });
+        }
+
     });
 </script>
+
 
 </html>
