--- a/app/templates/purchase.html
+++ b/app/templates/purchase.html
@@ -240,7 +240,7 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="table-responsive">
+            <!-- <div class="table-responsive" style="margin-top: 20px;">
                 <table class="table  table-hover text-center table-striped">
                     <thead style="background-color: rgb(9, 74, 83); color: aliceblue;">
                         <tr>
@@ -260,8 +260,33 @@
                     </tbody>
                 </table>
             </div> -->
+        </div><br>
+        <div class="row" style="background-color: rgb(0, 102, 255);margin-left: 0.4px;margin-right: 0.4px;">
+            <h4 class="text-center" style="color: #e9e9e9;margin-top: 20px;margin-bottom: -5px;font-size: medium;">AR
+                venture</h4>
+            <div class="col-md-12"
+                style="justify-content: center;display: flex;color: #ffffff;border-style: solid; align-items: center; font-size: x-large; font-weight: 600;  border-left: 0;border-right: 0;border-top: 0;border-width: 0.1px;height: 45px;border-color: rgb(20, 23, 22, 0.2);">
+                Sales By customer</div>
         </div>
-    </div><br>
+        <div class="table-responsive">
+            <table class="table  table-hover text-center table-striped">
+                <thead style="background-color: rgb(9, 74, 83); color: aliceblue;">
+                    <tr>
+                        <th>Customer</th>
+                        <th>Invoice Count</th>
+                        <th>Sales with Tax</th>
+                    </tr>
+                </thead>
+                <tbody style="background-color: rgb(28, 35, 40);">
+                    <tr style="color: aliceblue;">
+                        <td>rahul</td>
+                        <td>B</td>
+                        <td>Rs.1312</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
     <footer class="footer">
         <div class="container" style="justify-content: center;align-items: center;display: flex;">
             <div class="row" style="width: 100%;">
