--- a/app/templates/purchase.html
+++ b/app/templates/purchase.html
@@ -207,7 +207,7 @@
             <a href="#" class="w3-bar-item w3-button">Accounts payable <span class="dropdown-icon">&#9660;</span> </a>
         </div>
     </div>
-    <div class="container" style="margin-top: 96px;background-color:rgb(27, 26, 29);height: 400px;">
+    <div class="container" style="margin-top: 96px;background-color:rgb(27, 26, 29);height: max-content;">
         <div class="container">
             <div class="row" style="justify-content: space-between;">
                 <div style="margin-top: 20px;">
@@ -240,26 +240,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="table-responsive" style="margin-top: 20px;">
-                <table class="table  table-hover text-center table-striped">
-                    <thead style="background-color: rgb(9, 74, 83); color: aliceblue;">
-                        <tr>
-                            <th>ID</th>
-                            <th>IMAGE</th>
-                            <th>Book</th>
-                            <th>Author</th>
-                        </tr>
-                    </thead>
-                    <tbody style="background-color: rgb(28, 35, 40);">
-                        <tr style="color: aliceblue;">
-                            <td>id</td>
-                            <td>book_name</td>
-                            <td>author_nametd>
-                            <td>genere.ctgname</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div> -->
         </div><br>
         <div class="row" style="background-color: rgb(0, 102, 255);margin-left: 0.4px;margin-right: 0.4px;">
             <h4 class="text-center" style="color: #e9e9e9;margin-top: 20px;margin-bottom: -5px;font-size: medium;">AR
@@ -286,7 +266,66 @@
                 </tbody>
             </table>
         </div>
+        <div class="row" style="color: #151414;background-color: #f1f1f1;margin-left: 3px;margin-right: 3px;padding-top: 10px;">
+            <div class="col-md-3">
+                <div>
+                    <h6>Recurring Invoice:</h6>
+                    <span>1</span>
+                </div>
+            </div>
+        </div>
+        <div class="row"
+            style="color: #151414;background-color: #f1f1f1;margin-left: 3px;margin-right: 3px;padding-top: 20px;padding-bottom: 10px;">
+            <div class="col-md-3">
+                <div>
+                    <h6>Invoice Sale:</h6>
+                    <span>Rs.1782</span>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div>
+                    <h6>Recurring Invoice:</h6>
+                    <span>Rs.2841</span>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div>
+                    <h6>Credit Note:</h6>
+                    <span>Rs.2921</span>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div>
+                    <h6 style="font-weight: bold;">Total:</h6>
+                    <span>Rs.1831</span>
+                </div>
+
+            </div>
+            <div class="row"
+                style="color: #151414;background-color: #f1f1f1;margin-left: 3px;margin-right: 3px;padding-top: 20px;padding-bottom: 10px;">
+            </div>
+            <div class="col-md-3">
+                <div>
+                    <h6>Sub Total:</h6>
+                    <span>Rs.2361</span>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div>
+                    <h6>Sub Total with credit note:</h6>
+                    <span>Rs.288</span>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div>
+                    <h6>Total Customers:</h6>
+                    <span>Rs.1091</span>
+                </div>
+            </div>
+        </div>
+
     </div>
+
     <footer class="footer">
         <div class="container" style="justify-content: center;align-items: center;display: flex;">
             <div class="row" style="width: 100%;">
