--- a/app/templates/purchase.html
+++ b/app/templates/purchase.html
@@ -207,7 +207,7 @@
             <a href="#" class="w3-bar-item w3-button">Accounts payable <span class="dropdown-icon">&#9660;</span> </a>
         </div>
     </div>
-    <div class="container" style="margin-top: 96px;background-color:rgb(27, 26, 29);height: max-content;">
+    <div class="container" style="margin-top: 96px;background-color:rgb(27, 26, 29);height: 550px;">
         <div class="container">
             <div class="row" style="justify-content: space-between;">
                 <div style="margin-top: 20px;">
@@ -223,19 +223,19 @@
                     <div class="row">
                         <div class="col-md-3">
                             <button
-                                style="background-color: rgb(2, 57, 80);border: none;border-radius: 3px;outline: none;color: #f1f1f1;font-size: medium;width: 100px;margin-top: 5px;height: 30px">Customer</button>
+                                style="background-color: rgb(2, 57, 80);border: none;border-radius: 3px;outline: none;color: #f1f1f1;font-size: medium;width: 100px;margin-top: 5px;height: 30px">Pdf</button>
                         </div>
                         <div class="col-md-3">
                             <button
-                                style="background-color: rgb(2, 57, 80);border: none;border-radius: 3px;outline: none;color: #f1f1f1;font-size: medium;width: 100px;margin-top: 5px;height: 30px">Customer</button>
+                                style="background-color: rgb(2, 57, 80);border: none;border-radius: 3px;outline: none;color: #f1f1f1;font-size: medium;width: 100px;margin-top: 5px;height: 30px">Print</button>
                         </div>
                         <div class="col-md-3">
                             <button
-                                style="background-color: rgb(2, 57, 80);border: none;border-radius: 3px;outline: none;color: #f1f1f1;font-size: medium;width: 100px;margin-top: 5px;height: 30px">Customer</button>
+                                style="background-color: rgb(2, 57, 80);border: none;border-radius: 3px;outline: none;color: #f1f1f1;font-size: medium;width: 100px;margin-top: 5px;height: 30px">Export</button>
                         </div>
                         <div class="col-md-3">
                             <button
-                                style="background-color: rgb(2, 57, 80);border: none;border-radius: 3px;outline: none;color: #f1f1f1;font-size: medium;width: 100px;margin-top: 5px;height: 30px">Customer</button>
+                                style="background-color: rgb(2, 57, 80);border: none;border-radius: 3px;outline: none;color: #f1f1f1;font-size: medium;width: 100px;margin-top: 5px;height: 30px">Share</button>
                         </div>
                     </div>
                 </div>
@@ -252,24 +252,49 @@
             <table class="table  table-hover text-center table-striped">
                 <thead style="background-color: rgb(9, 74, 83); color: aliceblue;">
                     <tr>
-                        <th>Customer</th>
-                        <th>Invoice Count</th>
-                        <th>Sales with Tax</th>
+                        <th>
+                            DATE
+                        </th>
+                        <th>
+                            <center>
+                                <div style="width: max-content;">
+                                    DUE DATE
+                                </div>
+                            </center>
+                        </th>
+                        <th>
+                            <center>
+                                <div style="width: max-content;">
+                                    PURCHASE ORDER NUMBER
+                                </div>
+                            </center>
+                        </th>
+                        <th>CUSTOMERNAME</th>
+                        <th>
+                            <center>
+                                <div style="width: max-content;">
+                                    TOTAL AMOUNT
+                                </div>
+                            </center>
+                        </th>
                     </tr>
                 </thead>
                 <tbody style="background-color: rgb(28, 35, 40);">
                     <tr style="color: aliceblue;">
-                        <td>rahul</td>
-                        <td>B</td>
-                        <td>Rs.1312</td>
+                        <td>MAY 12,2024</td>
+                        <td>MAY 12,2024</td>
+                        <td>P023</td>
+                        <td>RAHUL</td>
+                        <td>Rs.1845</td>
                     </tr>
                 </tbody>
             </table>
         </div>
-        <div class="row" style="color: #151414;background-color: #f1f1f1;margin-left: 3px;margin-right: 3px;padding-top: 10px;">
+        <!-- <div class="row"
+            style="color: #151414;background-color: rgb(235, 230, 239);margin-left: 3px;margin-right: 3px;padding-top: 10px;">
             <div class="col-md-3">
                 <div>
-                    <h6>Recurring Invoice:</h6>
+                    <h6>Total Customers:</h6>
                     <span>1</span>
                 </div>
             </div>
@@ -301,9 +326,10 @@
                 </div>
 
             </div>
-            <div class="row"
-                style="color: #151414;background-color: #f1f1f1;margin-left: 3px;margin-right: 3px;padding-top: 20px;padding-bottom: 10px;">
-            </div>
+        </div>
+        <div class="row"
+            style="color: #151414;background-color: rgb(235, 230, 239);margin-left: 3px;margin-right: 3px;padding-top: 20px;padding-bottom: 10px;">
+
             <div class="col-md-3">
                 <div>
                     <h6>Sub Total:</h6>
@@ -322,9 +348,9 @@
                     <span>Rs.1091</span>
                 </div>
             </div>
-        </div>
-
+        </div> -->
     </div>
+
 
     <footer class="footer">
         <div class="container" style="justify-content: center;align-items: center;display: flex;">
