--- a/app/templates/purchase.html
+++ b/app/templates/purchase.html
@@ -174,10 +174,9 @@
                 <ul class="navbar-nav ml-auto" style="justify-content: right;align-items: baseline;">
                     <li class="nav-item">
                         <i class="fas fa-sign-in-alt"></i>
-                        <a class="nav-link"
+                        <a href="{%url 'logout' %}" class="nav-link"
                             style="color: rgb(245, 247, 249);font-weight: bold; font-size: medium; outline: none; border: none;margin-left: 5px;"
-                            id="log" type="button" class="btn" data-toggle="modal" data-target="#signupmodal">Sign
-                            In</a>
+                            id="log" type="button" class="btn">Logout</a>
                     </li>
                 </ul>
             </div>
