--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -16,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <title>zoho login</title>
+    <title>Taxi Booking</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -103,7 +103,7 @@
             background-color: #191919;
             color: #fff;
             padding: 50px 0;
-            margin-top: 375px;
+            margin-top: 245px;
         }
     </style>
 </head>
@@ -126,28 +126,39 @@
         {% endfor %}
       </div>
     </center> -->
-        <h1 style="font-size: large; font-weight: bold;">LOG IN</h1>
+        <h1 style="font-size: large; font-weight: bold;">Sign Up</h1>
         <div class="row" style="justify-content: center;">
             <div class="col-md-4" style="border-radius: 10px;background-color: #292a2b;">
                 <form action="{% url 'loginfun' %}" method="post"
                     style="margin-top: 20px;margin-bottom: 20px;background-color: #292a2b;">
                     {% csrf_token %}
                     <div class="form-group">
-                        <!-- <label for="email">Email:</label> -->
-                        <input class="form-control" type="text" id="username" name="username" required
+                        <input class="form-control" type="text" id="name" name="name" required
+                            placeholder="Customer Name">
+                    </div>
+
+                    <div class="form-group">
+                        <input class="form-control" type="text" id="uame" name="uame" required
                             placeholder="username">
                     </div>
+
                     <div class="form-group">
-                        <!-- <label for="email">Email:</label> -->
+                        <input class="form-control" type="text" id="mail" name="mail" required
+                            placeholder="Mail Id">
+                    </div>
+
+                    <div class="form-group">
+                        <input class="form-control" type="text" id="vendor" name="vendor" required
+                            placeholder="Vendor Name">
+                    </div>
+                    <div class="form-group">
+                        
                         <input class="form-control" type="password" id="password" name="password" required
-                            placeholder="password">
+                            placeholder="Password">
                     </div>
                     <div style="justify-content: space-around;display: flex;">
                         <button type="submit"
-                            style=" border: none;border-radius: 10px;font-size: medium;font-weight: bold;color: #1e2021;">Log
-                            In</button>
-                        <span style="color: #fff;">New User?</span>
-                        <a style="color: #fff;text-decoration: none;" href="{%url 'signup'%}">Sign Up</a>
+                            style=" border: none;border-radius: 10px;font-size: medium;font-weight: bold;color: #1e2021;">SignUp</button>
                     </div>
                 </form>
             </div>
