--- a/app/templates/customer.html
+++ b/app/templates/customer.html
@@ -165,8 +165,7 @@
 <body style="background-color:rgb(50, 46, 55);">
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color:rgb(27, 25, 29); ">
         <a class="navbar-brand" href="#" style="font-weight:bold;color: rgb(245, 247, 249);margin-left: 30PX;">zoho</a>
-        <span class="navbar-toggler-icon" onclick="w3_open()" id="openNav"
-            style="margin-right: 30px;background-color: rgb(245, 247, 249);"></span>
+
         <span class="navbar-toggler-icon" onclick="w3_close()" id="closeNav"
             style="display: none;margin-right: 30px;background-color: rgb(245, 247, 249);"></span>
         <div class="collapse navbar-collapse" id="navbarNav" style="justify-content: right;align-items: center;">
@@ -182,177 +181,50 @@
             </div>
         </div>
     </nav>
-
-    <div class="w3-sidebar w3-bar-block w3-collapse w3-card" id="mySidebar">
-        <a href="{%url 'land'%}" class="w3-bar-item w3-button" style="font-size: medium;">Home</a>
-        <a href="" class="w3-bar-item w3-button" style="font-size: medium;">Dashboard</a>
-        <a href="" class="w3-bar-item w3-button" style="font-size: medium;">cash & Bank</a>
-        <a href="#" class="w3-bar-item w3-button" style="font-size: medium;">sales</a>
-        <a href="#" class="w3-bar-item w3-button" style="font-size: medium;">Purchase</a>
-        <a href="#" class="w3-bar-item w3-button" style="font-size: medium;">Time Tracking</a>
-        <a href="#" class="w3-bar-item w3-button" style="font-size: medium;">Accounts</a>
-        <a href="#" class="w3-bar-item w3-button" style="font-size: medium;">Payroll</a>
-        <button class="w3-bar-item w3-button dropdown-btn" style="font-size: medium;color: #f1f1f1;">Reports<span
-                class="dropdown-icon">&#9660;</span> </button>
-        <div class="dropdown-container" style="background-color: transparent;">
-            <a href="#" class="w3-bar-item w3-button">Sales <span class="dropdown-icon">&#9660;</span> </a>
-            <button class="w3-bar-item w3-button nested-dropdown-btn" style="font-size: medium;color: #f1f1f1;">Stock
-                report <span class="dropdown-icon">&#9660;</span> </button>
-            <div class="nested-dropdown-container" style="background-color: transparent;">
-                <a href="#" class="w3-bar-item w3-button">Sales</a>
-                <a href="#" class="w3-bar-item w3-button" id="dropd">Sales by Customer</a>
-                <a href="#" class="w3-bar-item w3-button">Accounts payable </a>
-            </div>
-            <a href="#" class="w3-bar-item w3-button">Accounts payable <span class="dropdown-icon">&#9660;</span> </a>
-        </div>
-    </div>
-    <div class="container" style="margin-top: 96px;background-color:rgb(27, 26, 29);height: 550px;">
+    <div class="container" style="margin-top: 96px;background-color:rgb(27, 26, 29);height: 400px;">
         <div class="container">
             <div class="row" style="justify-content: space-between;">
                 <div style="margin-top: 20px;">
-                    <h1 style="font-size: larger;color: #f1f1f1;">Sales By Customer</h1>
+                    <h1 class="text-center" style="font-size: larger;color: #f1f1f1;">Add Purchase</h1>
                 </div>
-            </div><br>
-            <div class="row">
-                <div class="col-md-8">
-                    <button style="font-weight: bold;font-size: medium;border: none;border-radius: 3px;">Customer
-                        Report</button>
-                </div>
-                <div class="col-md-4">
-                    <div class="row">
-                        <div class="col-md-3">
-                            <button
-                                style="background-color: rgb(2, 57, 80);border: none;border-radius: 3px;outline: none;color: #f1f1f1;font-size: medium;width: 100px;margin-top: 5px;height: 30px">Pdf</button>
-                        </div>
-                        <div class="col-md-3">
-                            <button
-                                style="background-color: rgb(2, 57, 80);border: none;border-radius: 3px;outline: none;color: #f1f1f1;font-size: medium;width: 100px;margin-top: 5px;height: 30px">Print</button>
-                        </div>
-                        <div class="col-md-3">
-                            <button
-                                style="background-color: rgb(2, 57, 80);border: none;border-radius: 3px;outline: none;color: #f1f1f1;font-size: medium;width: 100px;margin-top: 5px;height: 30px">Export</button>
-                        </div>
-                        <div class="col-md-3">
-                            <button
-                                style="background-color: rgb(2, 57, 80);border: none;border-radius: 3px;outline: none;color: #f1f1f1;font-size: medium;width: 100px;margin-top: 5px;height: 30px">Share</button>
-                        </div>
+                <div class="row" style="justify-content: center;">
+                    <div class="col-md-4" style="border-radius: 10px;background-color: #292a2b;">
+                        <form action="{%url 'addorder'%}" method="post"
+                            style="margin-top: 20px;margin-bottom: 20px;background-color: #292a2b;">
+                            {% csrf_token %}
+                            <div class="form-group">
+                                <input class="form-control" type="text"  name="order" required
+                                    placeholder="Purchase order number" value="{{order.ordernumber}}">
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control" type="date" id="name" name="date" required
+                                    placeholder="Date">
+                            </div>
+
+                            <div class="form-group">
+                                <input class="form-control" type="date" name="dur" required placeholder="Due Date">
+                            </div>
+
+                            <div class="form-group">
+                                <input class="form-control" type="text" id="vendor" name="vendor" required
+                                    placeholder="Vendor Name">
+                            </div>
+
+                            <div class="form-group">
+                                <input class="form-control" type="text" id="amount" name="amount" required
+                                    placeholder="Purchase Amount">
+                            </div>
+                            
+                            <div style="justify-content: space-around;display: flex;">
+                                <button type="submit"
+                                    style=" border: none;border-radius: 10px;font-size: medium;font-weight: bold;color: #1e2021;">Add</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
-            </div>
+            </div><br>
         </div><br>
-        <div class="row" style="background-color: rgb(0, 102, 255);margin-left: 0.4px;margin-right: 0.4px;">
-            <h4 class="text-center" style="color: #e9e9e9;margin-top: 20px;margin-bottom: -5px;font-size: medium;">AR
-                venture</h4>
-            <div class="col-md-12"
-                style="justify-content: center;display: flex;color: #ffffff;border-style: solid; align-items: center; font-size: x-large; font-weight: 600;  border-left: 0;border-right: 0;border-top: 0;border-width: 0.1px;height: 45px;border-color: rgb(20, 23, 22, 0.2);">
-                Sales By customer</div>
-        </div>
-        <div class="table-responsive">
-            <table class="table  table-hover text-center table-striped">
-                <thead style="background-color: rgb(9, 74, 83); color: aliceblue;">
-                    <tr>
-                        <th>
-                            DATE
-                        </th>
-                        <th>
-                            <center>
-                                <div style="width: max-content;">
-                                    DUE DATE
-                                </div>
-                            </center>
-                        </th>
-                        <th>
-                            <center>
-                                <div style="width: max-content;">
-                                    PURCHASE ORDER NUMBER
-                                </div>
-                            </center>
-                        </th>
-                        <th>CUSTOMERNAME</th>
-                        <th>
-                            <center>
-                                <div style="width: max-content;">
-                                    TOTAL AMOUNT
-                                </div>
-                            </center>
-                        </th>
-                    </tr>
-                </thead>
-                {%for p in purchase%}
-                <tbody style="background-color: rgb(28, 35, 40);">
-                    <tr style="color: aliceblue;">
-                        <td>{{p.date}}</td>
-                        <td>{{p.duedate}}</td>
-                        <td>{{p.order}}</td>
-                        <td>{{p.user.first_name}}</td>
-                        <td>{{p.total}}</td>
-                    </tr>
-                </tbody>
-                {%endfor%}
-            </table>
-        </div>
-        <!-- <div class="row"
-            style="color: #151414;background-color: rgb(235, 230, 239);margin-left: 3px;margin-right: 3px;padding-top: 10px;">
-            <div class="col-md-3">
-                <div>
-                    <h6>Total Customers:</h6>
-                    <span>1</span>
-                </div>
-            </div>
-        </div>
-        <div class="row"
-            style="color: #151414;background-color: #f1f1f1;margin-left: 3px;margin-right: 3px;padding-top: 20px;padding-bottom: 10px;">
-            <div class="col-md-3">
-                <div>
-                    <h6>Invoice Sale:</h6>
-                    <span>Rs.1782</span>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div>
-                    <h6>Recurring Invoice:</h6>
-                    <span>Rs.2841</span>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div>
-                    <h6>Credit Note:</h6>
-                    <span>Rs.2921</span>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div>
-                    <h6 style="font-weight: bold;">Total:</h6>
-                    <span>Rs.1831</span>
-                </div>
-
-            </div>
-        </div>
-        <div class="row"
-            style="color: #151414;background-color: rgb(235, 230, 239);margin-left: 3px;margin-right: 3px;padding-top: 20px;padding-bottom: 10px;">
-
-            <div class="col-md-3">
-                <div>
-                    <h6>Sub Total:</h6>
-                    <span>Rs.2361</span>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div>
-                    <h6>Sub Total with credit note:</h6>
-                    <span>Rs.288</span>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div>
-                    <h6>Total Customers:</h6>
-                    <span>Rs.1091</span>
-                </div>
-            </div>
-        </div> -->
-    </div>
-
-
+    </div><br>
     <footer class="footer">
         <div class="container" style="justify-content: center;align-items: center;display: flex;">
             <div class="row" style="width: 100%;">
