--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -129,7 +129,7 @@
         <h1 style="font-size: large; font-weight: bold;">Sign Up</h1>
         <div class="row" style="justify-content: center;">
             <div class="col-md-4" style="border-radius: 10px;background-color: #292a2b;">
-                <form action="{% url 'loginfun' %}" method="post"
+                <form action="{% url 'signupfun' %}" method="post"
                     style="margin-top: 20px;margin-bottom: 20px;background-color: #292a2b;">
                     {% csrf_token %}
                     <div class="form-group">
@@ -138,12 +138,12 @@
                     </div>
 
                     <div class="form-group">
-                        <input class="form-control" type="text" id="uame" name="uame" required
+                        <input class="form-control" type="text" name="username" required
                             placeholder="username">
                     </div>
 
                     <div class="form-group">
-                        <input class="form-control" type="text" id="mail" name="mail" required
+                        <input class="form-control" type="email" id="mail" name="mail" required
                             placeholder="Mail Id">
                     </div>
 
@@ -152,7 +152,6 @@
                             placeholder="Vendor Name">
                     </div>
                     <div class="form-group">
-                        
                         <input class="form-control" type="password" id="password" name="password" required
                             placeholder="Password">
                     </div>
