--- a/app/templates/purchase.html
+++ b/app/templates/purchase.html
@@ -20,6 +20,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.0/html2pdf.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
     <title>zoho</title>
     <style>
         .navbar {
@@ -233,7 +234,7 @@
                                 style="background-color: rgb(2, 57, 80);border: none;border-radius: 3px;outline: none;color: #f1f1f1;font-size: medium;width: 80px;margin-top: 5px;height: 30px">Print</button>
                         </div>
                         <div class="col-md-3">
-                            <button
+                            <button id="export"
                                 style="background-color: rgb(2, 57, 80);border: none;border-radius: 3px;outline: none;color: #f1f1f1;font-size: medium;width: 80px;margin-top: 5px;height: 30px">Export</button>
                         </div>
                         <div class="col-md-3">
@@ -519,6 +520,14 @@
         window.print();
         document.body.innerHTML = originalContents;
     }
+</script>
+
+<script>
+    document.getElementById('export').addEventListener('click', function () {
+        const table = document.querySelector('table');
+        const wb = XLSX.utils.table_to_book(table, { sheet: "Sheet1" });
+        XLSX.writeFile(wb, 'sales_by_customer.xlsx');
+    });
 </script>
 
 
